[Bug #134710] Break text if too long

--- a/src/components/manage/Blocks/SiteBlocks/style.css
+++ b/src/components/manage/Blocks/SiteBlocks/style.css
@@ -193,6 +193,7 @@ h3.orange {
   margin-bottom: 1rem;
   padding: 0 1rem;
   border-radius: 10px;
+  overflow-wrap: break-word;
 }
 
 .bat-conclusions .installation-conclusions-wrapper {
